[gd_scene load_steps=14 format=3 uid="uid://b7msxcevmtjid"]

[ext_resource type="Script" path="res://Acteur/Player/Script/player.gd" id="1_lptw3"]
[ext_resource type="Texture2D" uid="uid://bfl6m3gvxvdj" path="res://kenney_pixel-platformer/Tilemap/tilemap-characters_packed.png" id="1_xkq1r"]
[ext_resource type="Texture2D" uid="uid://bjo2arjcga1tm" path="res://kenney_pixel-platformer/22.png" id="3_mnwdl"]
[ext_resource type="Script" path="res://Acteur/Player/Script/gun.gd" id="4_c6exs"]
[ext_resource type="AudioStream" uid="uid://k06pktb3vmxa" path="res://Audio/SoundEffect/Jump.mp3" id="5_dhrct"]
[ext_resource type="AudioStream" uid="uid://bh7lutl1g2qt2" path="res://Audio/SoundEffect/PlayerDamage.mp3" id="6_1opew"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jgaxc"]
atlas = ExtResource("1_xkq1r")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_daavv"]
atlas = ExtResource("1_xkq1r")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p8i2"]
atlas = ExtResource("1_xkq1r")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y1tc"]
atlas = ExtResource("1_xkq1r")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_6jba6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgaxc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_daavv")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p8i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y1tc")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_07gvd"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uqr2o"]

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_lptw3")

[node name="playerAnimation" type="AnimatedSprite2D" parent="."]
z_index = 5
sprite_frames = SubResource("SpriteFrames_6jba6")
animation = &"run"
autoplay = "idle"
frame_progress = 0.539107

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_07gvd")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_bottom = 200
limit_smoothed = true

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource("CircleShape2D_uqr2o")

[node name="Gun" type="Sprite2D" parent="."]
light_mask = 2
z_index = 6
position = Vector2(7, 5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mnwdl")
offset = Vector2(1.83, -1.21)
script = ExtResource("4_c6exs")

[node name="Marker2D" type="Marker2D" parent="Gun"]
position = Vector2(16, 3.09944e-06)

[node name="Laser" type="AudioStreamPlayer2D" parent="Gun"]
position = Vector2(-14, -10)
scale = Vector2(2, 2)

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dhrct")
volume_db = -5.0

[node name="DamageTaken" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1opew")

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
